--- a/ngmix_config/ngmix-tb-y1a1-v01c-metacal-005.yaml
+++ b/ngmix_config/ngmix-tb-y1a1-v01c-metacal-005.yaml
@@ -1,4 +1,6 @@
-# this one ngmixer symmetrizing the bmask
+# checking bmask frac
+# checking central 4 pixel radius of bmask
+# symmetrizing bmask
 #
 # psf rerun y1a1-v02
 # linear pars and flat priors
@@ -17,6 +19,13 @@ model_nbrs: False
 
 # skip when either all weight or all image are zero
 ignore_zero_weights_images: True
+
+# skip when too many pixels are masked in the bitmask
+max_bmask_frac: 0.1
+
+# skip if central region is masked
+# this is a 4 pixel offset in each direction
+central_bmask_radius: 4
 
 # we are using uberseg, so the weight map will be modifed. But
 # for correcting the correlated noise from metacal we want
