--- a/run_config/run-y1a1-v01-metacal-003.yaml
+++ b/run_config/run-y1a1-v01-metacal-003.yaml
@@ -11,6 +11,7 @@ meds_version: 'y1a1-v01'
 nbrs_version: '001'
 obj_flags_version: '001'
 
+# initial run
 ngmix_info:
   branch: "keep_prepix"
   hash: "916db1c0734ff614523f4524135c34afe48c761f"
@@ -20,6 +21,11 @@ ngmixer_info:
 galsim_info:
   branch: "#720"
   hash: "64192dfbf2bd7f9a616cf6dae7cf7476adace9c4"
+
+# fixed bug zero division
+ngmix_info:
+  branch: "keep_prepix"
+  hash: "30a183a1ef696dcc32cbf11ae757100889129667"
 
 
 # job setup
