set read_wcs to False

--- a/ngmix_config/ngmix-y1a1-us82-mof-016.yaml
+++ b/ngmix_config/ngmix-y1a1-us82-mof-016.yaml
@@ -8,7 +8,7 @@ imageio_type: "meds-des-y1"
 fit_me_galaxy: True
 fit_coadd_galaxy: False
 
-read_wcs: True
+read_wcs: False
 read_me_wcs: False
 
 model_nbrs: True
